# catchy

./: CMakeLists.txt  readme.md
catchy/: approx.cc  approx.h  falsestring.cc  falsestring.h  mapeq.h  stringeq.cc  vectorequals.h
